--- a/HeartRateMonitor/res/values/strings.xml
+++ b/HeartRateMonitor/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Heart Rate Monitor</string>
+    <string name="app_name">Сердце моё</string>
+    <string name="test_button">Boo!!!</string>
 </resources>
